rota para componente home

--- a/src/app/components/nav/nav.component.css
+++ b/src/app/components/nav/nav.component.css
@@ -1,21 +1,16 @@
 .container {
     height: 100%;
-    background-color: #28313B;
 }
 
 .sidenav {
     width: 13rem;
     color: white;
-    background-color: #485461;
-    background-image: linear-gradient(315deg, #28313b 0%, #485461 74%);
-    border: none;
+    background-color: #303030;
 }
 
 .logo {
     margin: 1rem 2rem 1rem 1rem;
-    font-size: x-large;
-    text-align: center;
-
+    font-size: 50px;
 }
 
 .sidenav a {
@@ -24,11 +19,10 @@
 
 .sidenav i {
     margin-right: .7rem;
+    color: #c2185b;
 }
 
 .menu-btn {
     margin: 1rem 0 0 1rem;
     color: white;
-    background-color: #485461;
-    background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
 }
