--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,10 +1,14 @@
 .card {
-    width: 70%;
-    margin: auto;
+    width: 90%;
+    margin: 1rem auto;
     background-color: #424242;
 }
 
 img {
     height: 20rem;
+}
 
+.avatar {
+    color: #00B0FF;
+    font-size: 40px;
 }
