--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,10 +1,8 @@
+<app-header></app-header>
 <mat-drawer-container class="container" autosize>
     <mat-drawer #drawer class="sidenav" mode="side">
-        
-        <i class="material-icons logo">laptop</i>
-        <mat-divider></mat-divider>
         <mat-nav-list class="nav-list">
-            <a mat-list-item routerLink="/">
+            <a mat-list-item routerLink="home">
                 <i class="material-icons">home</i>
                 Home
             </a>
@@ -28,7 +26,8 @@
     </mat-drawer>
   
     <div class="sidenav-content">
-        <button mat-mini-fab color="primary" class="menu-btn mat-elevation-z8" (click)="drawer.toggle()">
+        
+        <button mat-mini-fab class="menu-btn mat-elevation-z8" (click)="drawer.toggle()">
             <mat-icon>menu</mat-icon>
         </button>
         <router-outlet></router-outlet>
