html e css para pagina de login criados

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,1 +1,21 @@
-<p>login works!</p>
+<div class="container">
+    <form class="form mat-elevation-z8">
+
+        <h1>HelpDesk</h1>
+        <mat-divider></mat-divider>
+
+        <h3>Faça o login para continuar</h3>
+
+        <mat-form-field class="input" appearance="fill">
+            <mat-label>E-mail</mat-label>
+            <input matInput placeholder="Ex. email@mail.com">
+        </mat-form-field>
+    
+        <mat-form-field class="input" appearance="fill">
+            <mat-label>Senha</mat-label>
+            <input matInput type="password" placeholder="Digite sua senha">
+        </mat-form-field>
+
+        <button mat-raised-button color="primary">Login</button>
+    </form>
+</div>
