--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
 
         <h3>Faça o login para continuar</h3>
 
-        <mat-form-field class="input" appearance="fill">
+        <mat-form-field class="input" mat-blue-grey appearance="fill">
             <mat-label>E-mail</mat-label>
             <input [formControl]="email" [(ngModel)]="creds.email" name="email" matInput placeholder="Ex. email@mail.com" required>
         </mat-form-field>
