logout implementado e cores mudadas

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
 @import '../node_modules/ngx-toastr/toastr.css';
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.toast-container .ngx-toastr {
+    box-shadow: none;
+}
+
+.toast-container:hover .ngx-toastr:hover {
+    box-shadow: none;
+}
+
+.toast-error {
+    background-color: #f44336;
+}
+
+.toast-info {
+    background-color: #3f51b5;
+}
+
