requisição para api para componente tecnico-list

--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -16,7 +16,7 @@
 h1 { 
     width: 100%;
     text-align: left;
-    color: #3F51B5;
+    color: #2196f3;
     font-weight: 500;
     font-size: xx-large;
 }
