--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -3,14 +3,14 @@
     align-items: flex-start;
     justify-content: left;
     background-color: #424242;
-    border-bottom: 1px solid #3F51B5;
+    border-bottom: 1px solid #2196f3;
     height: 84px;   
 }
 
 .logo {
     margin: 1rem 1rem 2rem 1rem;
     font-size: 50px;
-    color: #3F51B5;
+    color: #2196f3;
 }
 
 .titulo-logo {
