--- a/src/mytheme.scss
+++ b/src/mytheme.scss
@@ -1,7 +1,7 @@
 @import "../node_modules/@angular/material/theming";
 @include mat-core();
 
-$primary: mat-palette($mat-indigo, 500);
+$primary: mat-palette($mat-blue, 500);
 $accent: mat-palette($mat-pink, 500);
 $warn: mat-palette($mat-red, 500);
 
