--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,14 +1,18 @@
-<mat-card class="card">
-    <mat-card-content>
-        <p>
-            Olá! Seja bem-vindo ao sistema Help Desk desenvolvido por mim no curso Desenvolvedor Full Stack. <br/>
-            Esse é um sistema para gerenciamento de chamados simulando um simples Help Desk desenvolvido em Angular 12 e Spring Boot 2.<br/>
-            O sistema está rodando na nuvem sendo o front na Vercel e o back na Heroku. <br/>
-            O projeto tem como objetivo principal abordar os conceitos de aplicações SPAs, Autenticação e Autorização com Tokens JWT e consumo de API RESTs.
-            O GitHub do projeto pode ser acessado clicando no link no menu lateral.<br/>
-            @gabrielgua
-        </p>
-    </mat-card-content>
-    <img mat-card-image src="assets/img/home-image.svg" alt="Photo of guys working.">
-    
-</mat-card>
+<div class="container">
+    <h1>Bem-vindo</h1>
+    <mat-divider></mat-divider>
+    <mat-card class="card">
+        <mat-card-content>
+            <p>
+                Olá! Seja bem-vindo ao sistema Help Desk desenvolvido por mim no curso Desenvolvedor Full Stack. <br/>
+                Esse é um sistema para gerenciamento de chamados simulando um simples Help Desk desenvolvido em Angular 12 e Spring Boot 2.<br/>
+                O sistema está rodando na nuvem sendo o front na Vercel e o back na Heroku. <br/>
+                O projeto tem como objetivo principal abordar os conceitos de aplicações SPAs, Autenticação e Autorização com Tokens JWT e consumo de API RESTs.
+                O GitHub do projeto pode ser acessado clicando no link no menu lateral.<br/>
+                @gabrielgua
+            </p>
+        </mat-card-content>
+        <img mat-card-image src="assets/img/home-image.svg" alt="Photo of guys working.">
+        
+    </mat-card>
+</div>
