--- a/src/app/components/tecnico-list/tecnico-list.component.html
+++ b/src/app/components/tecnico-list/tecnico-list.component.html
@@ -11,7 +11,7 @@
   </mat-form-field>
   
   <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort>
+    <table mat-table matSort [dataSource]="dataSource">
   
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> #. </th>
