adicionado rota para tecnico-create e tecnico-list movido para pasta tecnicos

--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
@@ -3,7 +3,7 @@
   <h1>Lista de Técnicos</h1>
   <mat-divider></mat-divider>
 
-  <button mat-raised-button color="primary">Novo Técnico</button>
+  <button routerLink="create" mat-raised-button color="primary">Novo Técnico</button>
 
   <mat-form-field appearance="standard">
     <mat-label>Buscar</mat-label>
