--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -10,7 +10,8 @@
     width: 30rem;
     margin: auto;
     padding: 1rem;
-    background-color: #424242;
+    border: 1px solid #2196f3;
+    border-radius: .5rem;
 }
 
 h1 { 
@@ -30,3 +31,5 @@ h3 {
     width: 100%;
     color: white;
 }
+
+
