--- a/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
+++ b/src/app/components/tecnico/tecnico-create/tecnico-create.component.html
@@ -7,34 +7,61 @@
             <section class="section">
                 <mat-form-field appearance="outline" class="fullWidth">
                     <mat-label>Nome</mat-label>
-                    <input matInput placeholder="Digite o nome">
+                    <input 
+                        [(ngModel)]="tecnico.nome" 
+                        name="nome"
+                        [formControl]="nome" 
+                        required 
+                        matInput 
+                        placeholder="Digite o nome" 
+                        maxlength="50">
                     <mat-icon color="primary" matSuffix>person</mat-icon>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline" class="fullWidth">
                     <mat-label>CPF</mat-label>
-                    <input matInput placeholder="Digite o CPF">
+                    <input 
+                        [(ngModel)]="tecnico.cpf"
+                        name="cpf"
+                        [formControl]="cpf" 
+                        required 
+                        matInput 
+                        placeholder="Digite o CPF" 
+                        mask="000.000.000-00">
                     <mat-icon color="primary" matSuffix>pin</mat-icon>
                 </mat-form-field>
 
                 <mat-form-field appearance="outline" class="fullWidth">
                     <mat-label>Email</mat-label>
-                    <input matInput placeholder="Digite o email">
+                    <input 
+                        [(ngModel)]="tecnico.email"
+                        name="email"
+                        [formControl]="email" 
+                        required 
+                        matInput 
+                        placeholder="Digite o email">
                     <mat-icon color="primary" matSuffix>email</mat-icon>
                 </mat-form-field>
                 
                 <mat-form-field appearance="outline" class="fullWidth">
                     <mat-label>Senha</mat-label>
-                    <input type="password" matInput placeholder="Digite a senha">
+                    <input 
+                         [(ngModel)]="tecnico.senha"
+                        name="senha"
+                        [formControl]="senha" 
+                        required 
+                        type="password" 
+                        matInput 
+                        placeholder="Digite a senha">
                     <mat-icon color="primary" matSuffix>key</mat-icon>
                 </mat-form-field>
 
-                <p><mat-checkbox color="primary" class="perfil" >Admin</mat-checkbox></p>
-                <p><mat-checkbox color="primary" class="perfil" >Cliente</mat-checkbox></p>
-                <p><mat-checkbox color="primary" class="perfil" >Técnico</mat-checkbox></p>
+                <p><mat-checkbox (click)="adicionarPerfil(0)" color="primary" class="perfil" >Admin</mat-checkbox></p>
+                <p><mat-checkbox (click)="adicionarPerfil(1)"  color="primary" class="perfil" >Cliente</mat-checkbox></p>
+                <p><mat-checkbox (click)="adicionarPerfil(2)"  color="primary" class="perfil" >Técnico</mat-checkbox></p>
 
                 <mat-divider></mat-divider>
-                <button mat-raised-button color="primary">Cadastrar</button>
+                <button (click)="criarTecnico()" [disabled]="!validaCampos()" mat-raised-button color="primary">Cadastrar</button>
                 
             </section>
         </form>
