--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
@@ -37,7 +37,14 @@
 
       <ng-container matColumnDef="acoes">
         <th mat-header-cell *matHeaderCellDef > Ações </th>
-        <td mat-cell *matCellDef="let row">Ações</td>
+        <td mat-cell *matCellDef="let row">
+          <a mat-mini-fab color="primary" class="btn-edit" routerLink="">
+            <mat-icon>edit</mat-icon>
+          </a>
+          <a mat-mini-fab color="warn" routerLink="">
+            <mat-icon>delete</mat-icon>
+          </a>
+        </td>
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
