componente e rota para tecnico-update criado

--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
@@ -38,7 +38,7 @@
       <ng-container matColumnDef="acoes">
         <th mat-header-cell *matHeaderCellDef > Ações </th>
         <td mat-cell *matCellDef="let row">
-          <a mat-mini-fab color="primary" class="btn-edit" routerLink="">
+          <a mat-mini-fab color="primary" class="btn-edit" routerLink="update">
             <mat-icon>edit</mat-icon>
           </a>
           <a mat-mini-fab color="warn" routerLink="">
