--- a/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
+++ b/src/app/components/tecnico/tecnico-update/tecnico-update.component.html
@@ -1,1 +1,70 @@
-<p>tecnico-update works!</p>
+<div class="container">
+    <h1>Atualizar Técnico</h1>
+    <mat-divider></mat-divider>
+    <div class="container-form mat-elevation-z8">
+        <form class="form">
+    
+            <section class="section">
+                <mat-form-field appearance="outline" class="fullWidth">
+                    <mat-label>Nome</mat-label>
+                    <input 
+                        [(ngModel)]="tecnico.nome" 
+                        name="nome"
+                        [formControl]="nome" 
+                        required 
+                        matInput 
+                        placeholder="Digite o nome" 
+                        maxlength="50">
+                    <mat-icon color="primary" matSuffix>person</mat-icon>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline" class="fullWidth">
+                    <mat-label>CPF</mat-label>
+                    <input 
+                        [(ngModel)]="tecnico.cpf"
+                        name="cpf"
+                        [formControl]="cpf" 
+                        required 
+                        matInput 
+                        placeholder="Digite o CPF" 
+                        mask="000.000.000-00">
+                    <mat-icon color="primary" matSuffix>pin</mat-icon>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline" class="fullWidth">
+                    <mat-label>Email</mat-label>
+                    <input 
+                        [(ngModel)]="tecnico.email"
+                        name="email"
+                        [formControl]="email" 
+                        required 
+                        matInput 
+                        placeholder="Digite o email">
+                    <mat-icon color="primary" matSuffix>email</mat-icon>
+                </mat-form-field>
+                
+                <mat-form-field appearance="outline" class="fullWidth">
+                    <mat-label>Senha</mat-label>
+                    <input 
+                         [(ngModel)]="tecnico.senha"
+                        name="senha"
+                        [formControl]="senha" 
+                        required 
+                        type="password" 
+                        matInput 
+                        placeholder="Digite a senha">
+                    <mat-icon color="primary" matSuffix>key</mat-icon>
+                </mat-form-field>
+
+                <p><mat-checkbox (click)="adicionarPerfil('0')" color="primary" class="perfil" >Admin</mat-checkbox></p>
+                <p><mat-checkbox (click)="adicionarPerfil('1')" color="primary" class="perfil" >Cliente</mat-checkbox></p>
+                <p><mat-checkbox (click)="adicionarPerfil('2')" color="primary" class="perfil" >Técnico</mat-checkbox></p>
+
+                <mat-divider></mat-divider>
+                <button (click)="atualizarTecnico()" [disabled]="!validaCampos()" mat-raised-button color="primary">Atualizar</button>
+                <a routerLink="../../" mat-button color="warn">Cancelar</a>
+                
+            </section>
+        </form>
+    </div>
+</div>
