rota para componente tecnico-delete criada

--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
@@ -46,7 +46,7 @@
           <a mat-mini-fab color="primary" class="btn-edit" routerLink="update/{{ tecnico.id }}">
             <mat-icon>edit</mat-icon>
           </a>
-          <a mat-mini-fab color="warn" routerLink="">
+          <a mat-mini-fab color="warn" routerLink="delete/{{ tecnico.id }}">
             <mat-icon>delete</mat-icon>
           </a>
         </td>
