componente tecnico-delete substituido por confirm-dialog, feita as devidas alterações

--- a/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
+++ b/src/app/components/tecnico/tecnico-list/tecnico-list.component.html
@@ -46,7 +46,7 @@
           <a mat-mini-fab color="primary" class="btn-edit" routerLink="update/{{ tecnico.id }}">
             <mat-icon>edit</mat-icon>
           </a>
-          <a mat-mini-fab color="warn" routerLink="delete/{{ tecnico.id }}">
+          <a mat-mini-fab color="warn" (click)="AbrirDialog(tecnico.id)"> 
             <mat-icon>delete</mat-icon>
           </a>
         </td>
@@ -60,6 +60,6 @@
       </tr>
     </table>
   
-    <mat-paginator [pageSizeOptions]="[5, 10, 25]" aria-label="Select page of users"></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[10, 25]" aria-label="Select page of users"></mat-paginator>
   </div>
 </div>
