--- a/src/app/components/chamado/chamado-list/chamado-list.component.html
+++ b/src/app/components/chamado/chamado-list/chamado-list.component.html
@@ -11,13 +11,15 @@
     </mat-form-field>
 
     <mat-radio-group color="primary">
-        <mat-radio-button>Aberto</mat-radio-button>
-        <mat-radio-button>Andamento</mat-radio-button>
-        <mat-radio-button>Encerrado</mat-radio-button>
+        <mat-radio-button (click)="retornarDefault()" color="warn">Todos</mat-radio-button>
+        |
+        <mat-radio-button class="margin-primeiro" (click)="ordenarPorStatus(0)" value="0">Aberto</mat-radio-button>
+        <mat-radio-button (click)="ordenarPorStatus(1)" value="1">Andamento</mat-radio-button>
+        <mat-radio-button (click)="ordenarPorStatus(2)" value="2">Encerrado</mat-radio-button>
     </mat-radio-group>
 
     <div class="mat-elevation-z8 container-table">
-      <table mat-table matSort [dataSource]="ELEMENT_DATA">
+      <table mat-table matSort [dataSource]="dataSource">
     
         <ng-container matColumnDef="id">
           <th mat-header-cell *matHeaderCellDef mat-sort-header> #. </th>
@@ -47,12 +49,12 @@
   
         <ng-container matColumnDef="prioridade">
           <th mat-header-cell *matHeaderCellDef> Prioridade </th>
-          <td mat-cell *matCellDef="let chamado"> {{chamado.prioridade}} </td>
+          <td mat-cell *matCellDef="let chamado"> {{retornaPrioridade(chamado.prioridade)}} </td>
         </ng-container>
   
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef> Status </th>
-            <td mat-cell *matCellDef="let chamado"> {{chamado.status}} </td>
+            <td mat-cell *matCellDef="let chamado"> {{retornaStatus(chamado.status)}} </td>
           </ng-container>
 
         <ng-container matColumnDef="acoes">
@@ -75,6 +77,6 @@
         </tr>
       </table>
     
-      <mat-paginator [pageSizeOptions]="[10, 25]" aria-label="Select page of users"></mat-paginator>
+      <mat-paginator [pageSizeOptions]="[5, 10, 25]" aria-label="Select page of users"></mat-paginator>
     </div>
   </div>
