--- a/src/app/components/chamado/chamado-list/chamado-list.component.html
+++ b/src/app/components/chamado/chamado-list/chamado-list.component.html
@@ -60,7 +60,7 @@
         <ng-container matColumnDef="acoes">
           <th mat-header-cell *matHeaderCellDef > Ações </th>
           <td mat-cell *matCellDef="let chamado">
-            <a mat-mini-fab color="primary" class="btn-edit">
+            <a mat-mini-fab color="primary" routerLink="update/{{chamado.id}}" class="btn-edit">
               <mat-icon>edit</mat-icon>
             </a>
             <a mat-mini-fab color="primary" class="btn-edit">
