--- a/src/app/components/chamado/chamado-update/chamado-update.component.html
+++ b/src/app/components/chamado/chamado-update/chamado-update.component.html
@@ -1,1 +1,97 @@
-<p>chamado-update works!</p>
+<div class="container">
+    <h1>Criar Chamado</h1>
+    <mat-divider></mat-divider>
+
+    <div class="container-form mat-elevation-z8">
+        <form class="form">
+            <section class="section">
+                <mat-form-field appearance="outline" class="fullWidth">
+                    <mat-label>Título</mat-label>
+                    <input 
+                        type="text" 
+                        [(ngModel)]="chamado.titulo"
+                        name="titulo"
+                        [formControl]="titulo"
+                        required 
+                        matInput 
+                        placeholder="Digite o título do chamado" 
+                        maxlength="50">
+                    <mat-icon color="primary" matSuffix>title</mat-icon>
+                </mat-form-field>
+
+                <mat-form-field appearance="outline" class="fullWidth">
+                    <mat-label>Observações</mat-label>
+                    <textarea 
+                        type="textarea"
+                        [(ngModel)]="chamado.observacoes" 
+                        name="observacoes"
+                        [formControl]="observacoes"
+                        required 
+                        matInput 
+                        placeholder="O que está acontecendo?" 
+                        maxlength="250"></textarea>
+                    <mat-icon color="primary" matSuffix>description</mat-icon>
+                </mat-form-field>
+                
+                <div class="status-prioridade">
+                    <mat-form-field appearance="outline">
+                        <mat-label>Status do chamado</mat-label>
+                        <mat-select
+                            [(ngModel)]="chamado.status"
+                            name="status"
+                            [formControl]="status"
+                            #singleSelect>
+                            <mat-option value="0">Aberto</mat-option>
+                            <mat-option value="0">Em andamento</mat-option>
+                            <mat-option value="0">Encerrado</mat-option>
+                        </mat-select>  
+                    </mat-form-field>
+
+                    <mat-form-field appearance="outline">
+                        <mat-label>Prioridade do chamado</mat-label>
+                        <mat-select
+                            [(ngModel)]="chamado.prioridade"
+                            name="prioridade"
+                            [formControl]="prioridade"
+                            #singleSelect>
+                            <mat-option value="0">Alta</mat-option>
+                            <mat-option value="0">Média</mat-option>
+                            <mat-option value="0">Baixa</mat-option>
+                        </mat-select>  
+                    </mat-form-field>
+                </div>
+
+                <div class="tecnico">
+                    <mat-form-field appearance="outline" class="fullWidth">
+                        <mat-label>Técnico Responsável</mat-label>
+                        <mat-select
+                            [(ngModel)]="chamado.tecnico"
+                            name="tecnico"
+                            [formControl]="tecnico"
+                            #singleSelect>
+                            <mat-option *ngFor="let tecnico of tecnicos" value="{{tecnico.id}}">{{tecnico.nome}}</mat-option>
+                        </mat-select>  
+                    </mat-form-field>
+                </div>
+
+                <div class="cliente">
+                    <mat-form-field appearance="outline" class="fullWidth">
+                        <mat-label>Cliente</mat-label>
+                        <mat-select
+                            [(ngModel)]="chamado.cliente"
+                            name="cliente"
+                            [formControl]="cliente"
+                            #singleSelect>
+                           <mat-option *ngFor="let cliente of clientes" value="{{cliente.id}}">{{cliente.nome}}</mat-option>
+                        </mat-select>  
+                    </mat-form-field>
+                </div>
+
+                <mat-divider></mat-divider>
+
+                <button (click)="salvar()" [disabled]="!validaCampos()" mat-raised-button color="primary">Enviar</button>
+                <button routerLink="../" mat-button color="warn">Cancelar</button>
+            </section>
+        </form>
+    </div>
+</div>
